<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NameAndAgeFragment">

    <data>
        <!-- Child tag of variable in data to bind data in ViewModel to layout -->
        <variable
            name="calcModel"
            type="com.example.cupcake.calculations.CalculationFunctions" />

        <!-- Add layout variable and type for view of fragment -->
        <variable
            name="nameAndAgeFragment"
            type="com.example.cupcake.NameAndAgeFragment" />
    </data>

    <!-- Contents of name, gender, and age -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin" >

            <!-- Enter calculation values -->
            <TextView
                android:id="@+id/intro_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_values"
                android:layout_gravity="center" />

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/top_dimen"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Show in view the name -->
            <TextView
                android:id="@+id/name_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <!-- Show where to enter the name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                tools:context=".ui.game.GameFragment">

                <!-- Input text here -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/enter_name"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_label"
                    tools:ignore="NotSibling">

                    <!-- Textbox dimensions -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName|textNoSuggestions"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider1"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Show in view the gender -->
            <TextView
                android:id="@+id/gender_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>

            <!-- Pick genders -->
            <RadioGroup
                android:id="@+id/genderOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <!-- Male -->
                <RadioButton
                    android:id="@+id/maleGender"
                    android:checked="true"
                    android:onClick="@{() -> calcModel.userGender(@string/male)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <!-- Female -->
                <RadioButton
                    android:id="@+id/femaleGender"
                    android:onClick="@{() -> calcModel.userGender(@string/female)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider2"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Show in view the age -->
            <TextView
                android:id="@+id/age_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"/>

            <!-- Layout of user age -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!-- Subtract age -->
                <ImageButton
                    android:id="@+id/decreaseAge"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    style="@style/MinusButtons"
                    android:onClick="@{() -> nameAndAgeFragment.editAge(@string/decrease)}"/>

                <!-- Age -->
                <TextView
                    android:id="@+id/showAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@{calcModel.ageString}"
                    tools:text="0"
                    style="@style/ScoreText" />

                <!-- Add age -->
                <ImageButton
                    android:id="@+id/increaseAge"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    style="@style/PlusButtons"
                    android:onClick="@{() -> nameAndAgeFragment.editAge(@string/increase)}"/>
            </RelativeLayout>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider3"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Show in view the unit -->
            <TextView
                android:id="@+id/unit_label"
                android:textSize="@dimen/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"/>

            <!-- Pick unit -->
            <RadioGroup
                android:id="@+id/unitOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <!-- Imperial -->
                <RadioButton
                    android:id="@+id/imperialUnit"
                    android:checked="true"
                    android:onClick="@{() -> calcModel.userUnit(@string/imperial)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial" />

                <!-- Metric -->
                <RadioButton
                    android:id="@+id/metricUnit"
                    android:onClick="@{() -> calcModel.userUnit(@string/metric)}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric" />
            </RadioGroup>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider4"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/div_height"
                android:layout_marginBottom="@dimen/margin_between_elements" />

            <!-- Next button -->
            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/min_width"
                android:onClick="@{() -> nameAndAgeFragment.saveName()}"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>
</layout>