<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultsFragment">

    <data>
        <!-- Child tag of variable in data to bind data in ViewModel to layout -->
        <variable
            name="calcModel"
            type="com.example.cupcake.calculations.CalculationFunctions" />

        <!-- Add layout variable and type for view of fragment -->
        <variable
            name="summaryFragment"
            type="com.example.cupcake.SummaryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <!-- Show in view the results -->
                <TextView
                    android:id="@+id/results_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/results_end"/>

                <TextView
                    android:id="@+id/results"
                    android:text="@{calcModel.results}"

                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/results_margin"
                    tools:text="Sample" />
            </LinearLayout>

            <!-- Divider for spacing -->
            <View
                android:id="@+id/divider"

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin" />

            <TextView
                android:id="@+id/email_label"
                style="@style/Widget.Cupcake.TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <!-- When button clicked, SummaryFragment sends the order -->
            <Button
                android:id="@+id/send_button"
                android:onClick="@{() -> summaryFragment.sendResults()}"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/send" />

            <!-- When button clicked, go back to StartFragment (placed below send_button) (modified) -->
            <Button
                android:id="@+id/cancel_button"
                android:onClick="@{() -> summaryFragment.quit()}"

                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@string/cancel" />
        </LinearLayout>
    </ScrollView>
</layout>